--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@upstash/redis": "^1.34.3",
         "axios": "^1.7.7",
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
