--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "jose": "^5.9.3",
         "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.0",
+        "node-cache": "^5.1.2",
         "pg": "^8.13.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.6.2",
