--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.685.0",
+        "@aws-sdk/s3-request-presigner": "^3.685.0",
         "@upstash/redis": "^1.34.3",
         "axios": "^1.7.7",
         "bcrypt": "^5.1.1",
