--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.0",
         "node-cache": "^5.1.2",
+        "nodemailer": "^6.9.16",
         "pg": "^8.13.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.6.2",
@@ -40,6 +41,7 @@
         "@types/express-rate-limit": "^5.1.3",
         "@types/morgan": "^1.9.9",
         "@types/node": "^22.7.4",
+        "@types/nodemailer": "^6.4.16",
         "@types/pg": "^8.11.10",
         "nodemon": "^3.1.7",
         "ts-node-dev": "^2.0.0"
