--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "build": "node -e \"if (process.platform === 'win32') require('child_process').execSync('rmdir /s /q dist'); else require('child_process').execSync('rm -rf dist');\" && tsc",
-        "start": "ts-node src/server.ts",
+        "build": "rimraf dist && tsc",
+        "start": "node dist/src/server.js",
         "dev": "nodemon src/server.ts",
-        "serve": "npm run build && pm2 start dist/server.js --name server",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
@@ -46,6 +45,7 @@
         "@types/nodemailer": "^6.4.16",
         "@types/pg": "^8.11.10",
         "nodemon": "^3.1.7",
+        "rimraf": "^6.0.1",
         "ts-node-dev": "^2.0.0"
     }
 }
