--- a/package.json
+++ b/package.json
@@ -30,22 +30,22 @@
         "node-cache": "^5.1.2",
         "nodemailer": "^6.9.16",
         "pg": "^8.13.0",
+        "rimraf": "^6.0.1",
         "ts-node": "^10.9.2",
         "typescript": "^5.6.2",
         "winston": "^3.15.0",
         "winston-daily-rotate-file": "^5.0.0",
-        "yup": "^1.4.0"
-    },
-    "devDependencies": {
+        "yup": "^1.4.0",
         "@types/cors": "^2.8.17",
         "@types/express": "^5.0.0",
         "@types/express-rate-limit": "^5.1.3",
         "@types/morgan": "^1.9.9",
         "@types/node": "^22.7.4",
         "@types/nodemailer": "^6.4.16",
-        "@types/pg": "^8.11.10",
+        "@types/pg": "^8.11.10"
+    },
+    "devDependencies": {
         "nodemon": "^3.1.7",
-        "rimraf": "^6.0.1",
         "ts-node-dev": "^2.0.0"
     }
 }
